레이아웃 수정

--- a/_posts/2025-05-14-docker-알아보기.md
+++ b/_posts/2025-05-14-docker-알아보기.md
@@ -14,7 +14,7 @@ categories:
     - Docker
 ---
 
-# 프로그램 배포에서 발생하는 문제
+## 프로그램 배포에서 발생하는 문제
 
 본격적인 Docker 및 Container 기술을 사용하기 이전에, 프로그램 배포에서 발생하는 문제에 대해 알아보자.
 
@@ -28,7 +28,7 @@ categories:
 
 하지만 이는 매우 비효율적이며 많은 시간이 소비되는 번거로운 작업이다.
 
-# Container를 사용한 배포
+## Container를 사용한 배포
 
 이런 문제는 Container Image를 통하여 배포를 하면 쉽게 해결할 수 있다.
 
@@ -38,11 +38,11 @@ categories:
 
 이렇게 Container Image만 관리하여 프로그램을 배포하면 개발 환경 또는 운영 환경의 환경이 다르더라도 프로그램이 정상적으로 실행될 수 있도록 관리할 수 있다.
 
-# 그럼 Container는 어떻게 구성되어 있을까?
+## 그럼 Container는 어떻게 구성되어 있을까?
 
 
 ---
-# 참고 링크
+## 참고 링크
 
 [LXC(Linux Containers) 위키피디아 링크](https://ko.wikipedia.org/wiki/LXC){:id="url"}
 
