--- a/_posts/2025-05-14-docker-알아보기.md
+++ b/_posts/2025-05-14-docker-알아보기.md
@@ -46,10 +46,21 @@ Container Image를 통해 배포하는 경우, 위에서 언급한 문제를 쉽
 
 따라서 Container와 비교했을 때 가상머신의 환경은 무겁고, 일반적인 기기 환경에서 동시에 여러 가상머신을 실행하여 서비스를 제공하는 것에 무리가 있다.
 
-Container는 하나의 공유되는 커널을 통하여 독립적인 시스템을 실행하기 때문에, 가상머신을 통하여 제공되는 환경에 비하여 더 가볍고, 더 많은 시스템을 동시에 실행할 수 있다.
+Container는 하나의 공유되는 커널을 통하여 독립적인 시스템을 실행하기 때문에, 리눅스에서 실행되는 프로세스 단위로 볼 수 있다.
+
+따라서 Container는 가상머신을 통하여 제공되는 환경에 비하여 더 가볍고, 더 많은 시스템을 동시에 실행할 수 있다.
 
 ![Container는 리눅스 커널 위에서 독립적으로 실행된다.](/assets/posts/250512/containers.png){: style="padding: 16px"}
 
+## Docker
+
+Docker는 이러한 Container를 이용할 수 있게 해주는 고급 사용자 인터페이스, 관리 시스템이다.
+
+Docker에서는 이러한 Container를 Docker Image로 사용하며, 이 이미지에는 서비스 시스템을 구축하는 것을 넘어, 서비스를를 실행할 수 있는 완전한 환경이 포함되어있다.
+
+예를들어 올바를 Java 버전이나, Tomcat 등의 라이브러리들이 이미지에 구축할 수 있다.
+
+Docker는 이러한 Image를 통하여 다른 환경에 쉽게 서비스를 배포할 수 있도록 하는 기술이다.
 
 ---
 ## 참고 링크
